2006-09-25  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/regenerate_config.c: Improved

2006-09-22  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "AF-BAT:Able to launch the Task launcher using the
	shortcuts in some cases when it is not possible from device".
	Fixes: NB#37594
	* hn-wm.c:
	  - Added tracking of the "_MB_NUM_MODAL_WINDOWS_PRESENT" MB
	  property
	  - Do not trigger an shortcut if there is a system modal window
	* hn-app-switcher.c: Do not handle HOME key when there is a system
	  modal window

2006-09-22  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-area.c:
	  - when selecting applets, add all applets first, then go to layout
	    mode if required, then remove the applets.
	* hildon-home/hildon-home-window.c: Added layout mode banner
	* hildon-home/hildon-home-titlebar.c:
	  - changed order of Tools submenu
	  - set name layout mode menu to get proper positioning

2006-09-22  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/regenerate_config.c:
  	- New helper program for postrm tn's plugin
          packages. Fixes: NB#36990

2006-09-22  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hildon-navigator-window.c:
        - Fixed initialization of hildon_dnotify_handler

2006-09-22  Tomas Junnonen <tomas.junnonen@nokia.com>

	Applied fix to "Shortcuts requiring modifiers fail to work most of the
	time". Fixes: NB#37546
	* hildon-navigator/hn-keys.c: Only return the shortcut on keypress
	* hildon-navigator/hn-wm-c: Apply the corresponding action on keyrelease

2006-09-22  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "        after setting ctrl+alt+"Russian char" for
	shortcut, in "finland" layout mode, can not assign any
	ctrl+alt+char shortcut any more". Fixes NB# 40214
	* hildon-navigator/hn-keys.c:
	  - do not grab keycode = 0 even with a mask
	  - do not return after first mask parsing failure
	  - _new should return NULL, not FALSE
